Bug 181934 - KMail crashes when selecting Empty Trash Bin with a lot of messages and Today tab selected (no files selected)
Summary: KMail crashes when selecting Empty Trash Bin with a lot of messages and Today...
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: new message list (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Unspecified
: NOR crash
Target Milestone: ---
Assignee: Szymon Stefanek
URL:
Keywords:
: 167925 185423 194906 196775 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-01-26 00:04 UTC by Jean-Christophe Dubois
Modified: 2009-06-16 20:19 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Christophe Dubois 2009-01-26 00:04:14 UTC
Version:            (using KDE 4.1.96)
Installed from:    Ubuntu Packages

I can reproduce quite easily this crash:

Put quite some files in the trash bin so that it span over several days/mounth.

open the trash bin, and open the "today" tab for example but don't select a file or a set of files.

Go back to the trash bin folder icon and ask to "empty recycle bin".

When I do this I get kontact log:

Calling appendChild() on a null node does nothing.
Calling appendChild() on a null node does nothing.
Calling appendChild() on a null node does nothing.
Calling appendChild() on a null node does nothing.
Calling appendChild() on a null node does nothing.
Calling appendChild() on a null node does nothing.
Calling appendChild() on a null node does nothing.
Calling appendChild() on a null node does nothing.
Calling appendChild() on a null node does nothing.
Calling appendChild() on a null node does nothing.
Calling appendChild() on a null node does nothing.
Calling appendChild() on a null node does nothing.
Calling appendChild() on a null node does nothing.
kontact(11181) Sonnet::Loader::loadPlugin: Successfully loaded plugin: "kspell_hspell.desktop"
kontact(11181) Sonnet::Loader::loadPlugin: Successfully loaded plugin: "kspell_enchant.desktop"
kontact(11181) KWallet::Wallet::openWallet: Pass a valid window to KWallet::Wallet::openWallet().
kontact(11181) ViewManager::setActiveView: entering ViewManager::setActiveView
kontact(11181): Shortcut for KAction  "clear_search" "Effacer la barre de recherche" set with QShortcut::setShortcut()! See KAction documentation.
kontact(11181): Attempt to use QAction "edit_undo" with KXMLGUIFactory!
kontact(11181): Attempt to use QAction "edit_redo" with KXMLGUIFactory!
kontact(11181) KStatusBar::removeItem: KStatusBar::removeItem: bad item id:  1
kontact(11181) KStatusBar::removeItem: KStatusBar::removeItem: bad item id:  2
kontact(11181) KStatusBar::removeItem: KStatusBar::removeItem: bad item id:  1
kontact(11181) KStatusBar::removeItem: KStatusBar::removeItem: bad item id:  2
kontact(11181) KStatusBar::removeItem: KStatusBar::removeItem: bad item id:  1
kontact(11181) KStatusBar::removeItem: KStatusBar::removeItem: bad item id:  2
kontact(11181) <unnamed>::UrlHandler::UrlHandler: UrlHandler() (iCalendar)
kontact(11181) KSharedUiServerProxy::KSharedUiServerProxy: kuiserver registered
QPainter::begin: Widget painting can only begin as a result of a paintEvent
QPainter::setWorldTransform: Painter not active
*** KMail got signal 11 (Crashing)
KCrash: Application 'kontact.org' crashing...

I also get this back trace (which is said to be not very usefull in french).

Cette pile des appels apparaît être inutilisable.
C'est probablement dû au fait que votre paquetage a été construit d'une manière qui empêche de créer des piles d'appels corrects, ou que le cadre de pile a été sérieusement corrompu dans l'incident.

(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[Thread debugging using libthread_db enabled]
[New Thread 0xb4a126c0 (LWP 11320)]
[New Thread 0xaa1b4b90 (LWP 11335)]
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
0xb7f46430 in __kernel_vsyscall ()
[Current thread is 0 (LWP 11320)]

Thread 2 (Thread 0xaa1b4b90 (LWP 11335)):
#0  0xb7f46430 in __kernel_vsyscall ()
#1  0xb596ac01 in select () from /lib/tls/i686/cmov/libc.so.6
#2  0xb5c3a150 in ?? () from /usr/lib/libQtCore.so.4
#3  0xb5b6a6ae in ?? () from /usr/lib/libQtCore.so.4
#4  0xb529950f in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#5  0xb59727ee in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 1 (Thread 0xb4a126c0 (LWP 11320)):
#0  0xb7f46430 in __kernel_vsyscall ()
#1  0xb592dde6 in nanosleep () from /lib/tls/i686/cmov/libc.so.6
#2  0xb592dbfe in sleep () from /lib/tls/i686/cmov/libc.so.6
#3  0xb6cb7bd2 in ?? () from /usr/lib/libkdeui.so.5
#4  0xb6cb85d4 in KCrash::defaultCrashHandler () from /usr/lib/libkdeui.so.5
#5  <signal handler called>
#6  0xb1374f66 in ?? () from /usr/lib/libkmailprivate.so.4
#7  0xb1380589 in ?? () from /usr/lib/libkmailprivate.so.4
#8  0xb0ecad63 in ?? () from /usr/lib/libkmailprivate.so.4
#9  0xb5c6fa60 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#10 0xb5c707e2 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#11 0xb5caa7a7 in QTimer::timeout () from /usr/lib/libQtCore.so.4
#12 0xb5c7640e in QTimer::timerEvent () from /usr/lib/libQtCore.so.4
#13 0xb5c6a53f in QObject::event () from /usr/lib/libQtCore.so.4
#14 0xb61228ec in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#15 0xb612a72e in QApplication::notify () from /usr/lib/libQtGui.so.4
#16 0xb6c4304d in KApplication::notify () from /usr/lib/libkdeui.so.5
#17 0xb5c5ae61 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#18 0xb5c88d81 in ?? () from /usr/lib/libQtCore.so.4
#19 0xb5c85520 in ?? () from /usr/lib/libQtCore.so.4
#20 0xb4f296f8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#21 0xb4f2cda3 in ?? () from /usr/lib/libglib-2.0.so.0
#22 0xb4f2cf61 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#23 0xb5c85478 in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#24 0xb61bcea5 in ?? () from /usr/lib/libQtGui.so.4
#25 0xb5c5952a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#26 0xb5c596ea in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#27 0xb5c5bda5 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#28 0xb6122767 in QApplication::exec () from /usr/lib/libQtGui.so.4
#29 0x0804c072 in _start ()
#0  0xb7f46430 in __kernel_vsyscall ()
Comment 1 Dario Andres 2009-01-26 00:08:26 UTC
As you can reproduce the crash at will, may you read http://techbase.kde.org/Development/Tutorials/Debugging/How_to_create_useful_crash_reports and post a complete backtrace here? Thanks :)
Comment 2 Jean-Christophe Dubois 2009-01-26 08:28:46 UTC
Here is a more usefull backtrace hopefully.

Application : Kontact (kontact.org), signal SIGSEGV

Thread 1 (Thread 0xb4a036c0 (LWP 20101)):
[KCrash Handler]
#6  KMail::MessageListView::Core::Model::index (this=0x9baa830, item=0x9ea9ad0, column=0) at /usr/include/qt4/QtCore/qlist.h:83
#7  0xb13ab589 in KMail::MessageListView::Core::Model::viewItemJobStep (this=0x9baa830) at /build/buildd/kdepim-4.1.96/kmail/messagelistview/core/model.cpp:3803
#8  0xb0ef5d63 in KMail::MessageListView::Core::Model::qt_metacall (this=0x9baa830, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0xbfa38a18)
    at /build/buildd/kdepim-4.1.96/obj-i486-linux-gnu/kmail/moc_model.cpp:75
#9  0xb5c60a60 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#10 0xb5c617e2 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#11 0xb5c9b7a7 in QTimer::timeout () from /usr/lib/libQtCore.so.4
#12 0xb5c6740e in QTimer::timerEvent () from /usr/lib/libQtCore.so.4
#13 0xb5c5b53f in QObject::event () from /usr/lib/libQtCore.so.4
#14 0xb61138ec in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#15 0xb611b72e in QApplication::notify () from /usr/lib/libQtGui.so.4
#16 0xb6c3404d in KApplication::notify (this=0xbfa39158, receiver=0x9baa600, event=0xbfa38eac) at /build/buildd/kde4libs-4.1.96/kdeui/kernel/kapplication.cpp:307
#17 0xb5c4be61 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#18 0xb5c79d81 in ?? () from /usr/lib/libQtCore.so.4
#19 0xb5c76520 in ?? () from /usr/lib/libQtCore.so.4
#20 0xb4f1a6f8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#21 0xb4f1dda3 in ?? () from /usr/lib/libglib-2.0.so.0
#22 0xb4f1df61 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#23 0xb5c76478 in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#24 0xb61adea5 in ?? () from /usr/lib/libQtGui.so.4
#25 0xb5c4a52a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#26 0xb5c4a6ea in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#27 0xb5c4cda5 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#28 0xb6113767 in QApplication::exec () from /usr/lib/libQtGui.so.4
#29 0x0804c072 in main (argc=1, argv=0xbfa39454) at /build/buildd/kdepim-4.1.96/kontact/src/main.cpp:218

Comment 3 Dario Andres 2009-01-26 13:38:48 UTC
Thanks a lot. Seems to be a genuine report (I can't find any duplicates)
Comment 4 Dario Andres 2009-01-26 13:41:18 UTC
The original report of bug 172686 (bug 172686 comment 0) may be related to this
Comment 5 Christophe Marin 2009-03-09 10:27:20 UTC
*** Bug 185423 has been marked as a duplicate of this bug. ***
Comment 6 Jaime Torres 2009-04-03 17:29:25 UTC
*** Bug 167925 has been marked as a duplicate of this bug. ***
Comment 7 Jaime Torres 2009-04-27 10:14:51 UTC
I am not totally sure that bug #190303 is a duplicate of this, but it has the most complete backtrace.
Comment 8 Dario Andres 2009-06-02 13:11:55 UTC
*** Bug 194906 has been marked as a duplicate of this bug. ***
Comment 9 Szymon Stefanek 2009-06-06 06:42:54 UTC
SVN commit 978103 by stefanek:

Don't attempt to restore the selection/position on a deleted
group header after a view item job step.

BUG: 181934



 M  +6 -0      model.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=978103
Comment 10 Dario Andres 2009-06-16 20:19:15 UTC
*** Bug 196775 has been marked as a duplicate of this bug. ***