Don't attempt to restore the selection/position on a deleted group header after a view item job step.

BUG: 181934


svn path=/trunk/KDE/kdepim/; revision=978103